2022-11-02  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (extract_section): Mark static.

2022-11-01  Aaron Merey  <amerey@redhat.com>

	* debuginfod-client.c (path_escape): Add early return.

2022-10-31  Aaron Merey  <amerey@redhat.com>

	* Makefile.am (libdebuginfod_so_LDLIBS): Add libelf.
	* debuginfod-client.c (debuginfod_find_section): New function.
	(path_escape): New function.
	(extract_section): New function.
	(cache_find_section): New function.
	(debuginfod_query_server): Add support for section queries.
	* debuginfod-find.c (main): Add support for section queries.
	* debuginfod.cxx (extract_section): New function.
	(handle_buildid_f_match): Add section parameter.  When non-empty,
	try to create response from section contents.
	(handle_buildid_r_match): Add section parameter.  When non-empty,
	try to create response from section contents.
	(handle_buildid_match): Add section parameter. Pass to
	handle_buildid_{f,r}_match.
	(handle_buildid): Handle section name when artifacttype is set to
	"section".  Query upstream servers via debuginfod_find_section
	when necessary.
	(debuginfod.h.in): Add declaration for debuginfod_find_section.
	(libdebuginfod.map): Add debuginfod_find_section.

2022-10-18  Daniel Thornburgh <dthorn@google.com>

  * debuginfod-client.c (debuginfod_query_server): Add DEBUGINFOD_HEADERS_FILE
  setting to supply outgoing HTTP headers.

2022-10-17  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfod.cxx (main): Report libmicrohttpd version.

2022-09-28  Aaron Merey  <amerey@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): Switch sign of some
	error codes from positive to negative.

2022-09-08  Frank Ch. Eigler  <fche@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): Clear
	->winning_headers along with ->url at the start of any new query.

2022-09-08  Martin Liska  <mliska@suse.cz>

	* debuginfod-client.c (debuginfod_get_headers): Add to DUMMY_LIBDEBUGINFOD.
